--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -6,7 +6,8 @@ jobs:
   ci:
     strategy:
       fail-fast: false
-      python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
