--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Install requirements
         run: poetry install
       - name: Run black
-        run: black --check --diff ypres tests
+        run: python -m poetry run black --check --diff ypres tests
       - name: Run mypy
-        run: mypy ypres tests
+        run: python -m poetry run mypy ypres tests
       - name: Run flake8
-        run: flake8 ypres tests
+        run: python -m poetry run flake8 ypres tests
       - name: Run unit tests
         run: python -m unittest tests/*.py
