--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyflakes = "^3.0.1"
 wheel = "^0.40.0"
 mypy = "^1.2.0"
 ipython = "^8.13.1"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
