--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,23 @@
 [project]
 name = "ypres"
+version = "1.0.1"
 description = "ypres is a simple object serialization framework built for speed."
-version = "1.0.0"
+authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@gmail.com" }]
+requires-python = ">=3.11,<4.0"
 readme = "README.md"
-authors = [{name = "Andrew Hankinson", email = "andrew.hankinson@gmail.com"}]
-requires-python = '>=3.10,<4.0'
 dependencies = []
 
-[tool.poetry]
-requires-poetry = '>=2.0,<3.0'
-
-[tool.poetry.group.dev.dependencies]
-pep8 = "^1.5.7"
-py = "1.4.26"
-flake8 = "^6.0.0"
-pyflakes = "^3.0.1"
-wheel = "^0.40.0"
-mypy = "^1.2.0"
-ipython = "^8.13.1"
-black = "^23.3.0"
+[dependency-groups]
+dev = [
+    "py>=1.4.26",
+    "wheel>=0.40.0,<0.50",
+    "mypy>=1.2.0,<2",
+    "ipython>=9.0.0,<10",
+]
 
 [build-system]
-requires = ['poetry-core (>=2.0,<3.0)']
-build-backend = "poetry.core.masonry.api"
-
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff.lint]
 select = [
