--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ypres"
-version = "1.1.1"
+version = "1.1.2"
 description = "ypres is a simple object serialization framework built for speed."
 authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@gmail.com" }]
 requires-python = ">=3.11,<4.0"
@@ -13,6 +13,7 @@ dev = [
     "wheel>=0.40.0,<0.50",
     "mypy>=1.2.0,<2",
     "ipython>=9.0.0,<10",
+    "pyright>=1.1.405",
 ]
 
 [build-system]
